# essdive-mcp

./: CBORG_SETUP.md  Dockerfile  LICENSE  README.md  check_fastmcp.py  check_fastmcp_params.py  check_imports.py  check_lowlevel.py  check_types.py  claude_desktop_config.json  cli_test.py  client.py  direct_client.py  main.py  minimal_server_test.py  minimal_working_server.py  pyproject.toml  test_client.py
.agents/skills/: README.md
.agents/skills/essdeepdive/: SKILL.md
.agents/skills/essdive-data-citations/: SKILL.md
.agents/skills/essdive-datasets/: SKILL.md
.agents/skills/essdive-identifiers/: SKILL.md
.agents/skills/references/: essdive_project_portals.yaml  essdive_projects.yaml
.claude-plugin/: marketplace.json
.github/workflows/: qc.yml
docs/: CBORG_SETUP.md  GOOSE_SETUP.md  HOSTED_HTTP_SETUP.md  SKILLS.md
scripts/: check_prereqs.sh  install_codex_skills.sh  save_token.sh  setup_local.sh  start_server.sh  uninstall_codex_skills.sh
skills/: README.md
skills/essdeepdive/: SKILL.md
skills/essdive-datasets/: SKILL.md
skills/essdive-identifiers/: SKILL.md
src/essdive_mcp/: __init__.py  client.py  main.py  projects.py  server.py
tests/: test_api.py
tests/integration/: conftest.py  test_api_integration.py
tests/integration/fixtures/: api_examples.json
tests/unit/: test_api_unit.py
