[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "essdive-mcp"
version = "0.2.0"
description = "MCP Server for ESS-DIVE API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.24.0",
    "fastmcp>=2.13.3",
]

[project.scripts]
essdive-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "client.py"
]
